--- a/src/Notepad/Notes.css
+++ b/src/Notepad/Notes.css
@@ -16,6 +16,7 @@
   padding: 14px 8px 10px 8px;
   border-radius: 15px;
   cursor: default;
+  font-size: 30px;
 }
 
 .message-component h1:hover {
@@ -77,6 +78,10 @@
   border-radius: 10px;
   background-color: lightyellow;
   box-shadow: 0 3px 10px rgba(161, 153, 153, 0.2);
+}
+
+.message-board h3 {
+  margin: 10px;
 }
 
 .singlecomment-container {
