--- a/src/Notepad/Notes.css
+++ b/src/Notepad/Notes.css
@@ -72,22 +72,28 @@
   width: 90%;
   height: 200px;
   border: solid 1px black;
-  overflow-wrap: break-word;
-  overflow-y: scroll;
   padding: 10px;
   border-radius: 10px;
   background-color: lightyellow;
   box-shadow: 0 3px 10px rgba(161, 153, 153, 0.2);
 }
 
-.message-board h3 {
+.message-board-heading {
   margin: 10px;
+  height: 20px;
+}
+
+.message-board-post {
+  overflow-y: scroll;
+  overflow-wrap: break-word;
+  height: 158px;
 }
 
 .singlecomment-container {
   text-align: left;
+  width: 100%;
 }
 
 .singlecomment {
-  margin: 2px;
+  margin: 5px;
 }
