--- a/src/Notification/Notification.css
+++ b/src/Notification/Notification.css
@@ -9,15 +9,15 @@
 }
 
 .intro-slide {
-  width: 990px;
+  width: 60%;
   height: 92px;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 10px;
   border-radius: 10px;
-  margin-right: 15px;
-  margin-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
   margin-top: 15px;
   background-color: #ff8400;
   animation-name: specialNodes;
@@ -39,26 +39,44 @@
 }
 
 .about-slide {
-  width: 990px;
+  width: 60%;
   height: 92px;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 10px;
   border-radius: 10px;
-  margin-right: 15px;
-  margin-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
   margin-top: 15px;
   background-color: #ff8400;
 }
 
 .about-slide p {
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .about-slide:hover {
   transform: scale(1.1);
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
+}
+@media screen and (max-width: 1140px) {
+  .about-slide p {
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 800px) {
+  .about-slide p {
+    font-size: 12px;
+  }
+}
+@media screen and (max-width: 646px) {
+  .intro-slide p {
+    font-size: 14px;
+  }
+  .about-slide p {
+    font-size: 10px;
+  }
 }
 
 .text-box {
@@ -82,9 +100,9 @@
 
 .left-arrow {
   position: absolute;
-  top: 50%;
-  left: 10px;
-  font-size: 43px;
+  top: 45%;
+  left: 15px;
+  font-size: 50px;
   color: black;
   z-index: 10;
   cursor: pointer;
@@ -95,9 +113,9 @@
 }
 .right-arrow {
   position: absolute;
-  top: 50%;
-  right: 10px;
-  font-size: 43px;
+  top: 45%;
+  right: 15px;
+  font-size: 50px;
   color: black;
   z-index: 10;
   cursor: pointer;
@@ -139,17 +157,14 @@
 @keyframes specialNodes {
   0% {
     transform: scale(0.2);
-    /*background-color: darkslategrey;*/
   }
 
   50% {
     transform: scale(1.2);
-    /*background-color: darkslategrey;*/
   }
 
   100% {
     transform: scale(1);
-    /*background-color: darkslategrey;*/
   }
 }
 
