--- a/src/PathfindingVisualizer/Node/Node.css
+++ b/src/PathfindingVisualizer/Node/Node.css
@@ -5,48 +5,25 @@
   display: inline-block;
 }
 
-@media screen and (max-width: 965px) {
+@media screen and (min-width: 490px) {
   .node {
-    width: 16px;
-    height: 16px;
-    outline: 2px solid rgb(175, 216, 248);
-    display: inline-block;
-  }
-}
-@media screen and (max-width: 1271px) {
-  .node {
-    width: 23px;
-    height: 23px;
-    outline: 2px solid rgb(175, 216, 248);
-    display: inline-block;
-  }
-}
-@media screen and (max-width: 1165px) {
-  .node {
-    width: 20px;
-    height: 20px;
-    outline: 2px solid rgb(175, 216, 248);
-    display: inline-block;
-  }
-}
-@media screen and (max-width: 1015px) {
-  .node {
-    width: 17px;
-    height: 17px;
+    width: 10px;
+    height: 10px;
     outline: 2px solid rgb(175, 216, 248);
     display: inline-block;
   }
 }
 
-@media screen and (max-width: 864px) {
+@media screen and (min-width: 580px) {
   .node {
-    width: 14px;
-    height: 14px;
+    width: 11px;
+    height: 11px;
     outline: 2px solid rgb(175, 216, 248);
     display: inline-block;
   }
 }
-@media screen and (max-width: 714px) {
+
+@media screen and (min-width: 630px) {
   .node {
     width: 12px;
     height: 12px;
@@ -55,52 +32,149 @@
   }
 }
 
+@media screen and (min-width: 700px) {
+  .node {
+    width: 14px;
+    height: 14px;
+    outline: 2px solid rgb(175, 216, 248);
+    display: inline-block;
+  }
+}
+
+@media screen and (min-width: 760px) {
+  .node {
+    width: 15px;
+    height: 15px;
+    outline: 2px solid rgb(175, 216, 248);
+    display: inline-block;
+  }
+}
+
+@media screen and (min-width: 870px) {
+  .node {
+    width: 17px;
+    height: 17px;
+    outline: 2px solid rgb(175, 216, 248);
+    display: inline-block;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .node {
+    width: 20px;
+    height: 20px;
+    outline: 2px solid rgb(175, 216, 248);
+    display: inline-block;
+  }
+}
+
+@media screen and (min-width: 1100px) {
+  .node {
+    width: 22px;
+    height: 22px;
+    outline: 2px solid rgb(175, 216, 248);
+    display: inline-block;
+  }
+}
+
+@media screen and (min-width: 1180px) {
+  .node {
+    width: 23px;
+    height: 23px;
+    outline: 2px solid rgb(175, 216, 248);
+    display: inline-block;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .node {
+    width: 25px;
+    height: 25px;
+    outline: 2px solid rgb(175, 216, 248);
+    display: inline-block;
+  }
+}
+
+@media screen and (min-width: 1380px) {
+  .node {
+    width: 27px;
+    height: 27px;
+    outline: 2px solid rgb(175, 216, 248);
+    display: inline-block;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .node {
+    width: 28px;
+    height: 28px;
+    outline: 2px solid rgb(175, 216, 248);
+    display: inline-block;
+  }
+}
+
+@media screen and (min-width: 1480px) {
+  .node {
+    width: 29px;
+    height: 29px;
+    outline: 2px solid rgb(175, 216, 248);
+    display: inline-block;
+  }
+}
+
+@media screen and (min-width: 1580px) {
+  .node {
+    width: 31px;
+    height: 31px;
+    outline: 2px solid rgb(175, 216, 248);
+    display: inline-block;
+  }
+}
+
+@media screen and (min-width: 1690px) {
+  .node {
+    width: 33px;
+    height: 33px;
+    outline: 2px solid rgb(175, 216, 248);
+    display: inline-block;
+  }
+}
+
+@media screen and (min-width: 1790px) {
+  .node {
+    width: 35px;
+    height: 35px;
+    outline: 2px solid rgb(175, 216, 248);
+    display: inline-block;
+  }
+}
+
+@media screen and (min-width: 1850px) {
+  .node {
+    width: 36px;
+    height: 36px;
+    outline: 2px solid rgb(175, 216, 248);
+    display: inline-block;
+  }
+}
+
 .node-start {
-  /*border: 1px solid rgb(175, 216, 248);*/
   background-image: url(../../images/mouse.svg);
-  /*background-color: rgb(255, 254, 106);*/
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
-
-  /* animation-name: specialNodes;
-  animation-duration: 2s;
-  animation-timing-function: ease-out;
-  animation-delay: 0;
-  animation-direction: alternate;
-  animation-iteration-count: 1;
-  animation-fill-mode: forwards;
-  animation-play-state: running; */
 }
 
 .node-finish {
-  /*border: 1px solid rgb(175, 216, 248);*/
   background-image: url(../../images/cheese.svg);
-  /*background-color: rgb(255, 254, 106);*/
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
-  /* animation-name: specialNodes;
-  animation-duration: 2s;
-  animation-timing-function: ease-out;
-  animation-delay: 0;
-  animation-direction: alternate;
-  animation-iteration-count: 1;
-  animation-fill-mode: forwards;
-  animation-play-state: running; */
 }
 
 .node-wall {
   background-color: rgb(12, 53, 71);
-  /* animation: specialNodes;
-  animation-duration: 1s;
-  animation-timing-function: ease-out;
-  animation-delay: 0;
-  animation-direction: alternate;
-  animation-iteration-count: 1;
-  animation-fill-mode: backwards;
-  animation-play-state: running; */
 }
+
 .node-trap {
   background-image: url(../../images/cat.svg);
   background-position: center;
@@ -110,7 +184,6 @@
 
 .node-finish-visited {
   background-image: url(../../images/mouse.svg);
-  /*background-color: rgb(255, 254, 106);*/
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
@@ -118,7 +191,6 @@
 
 .node-start-visited {
   background-image: url(../../images/mouse.svg);
-  /*background-color: rgb(255, 254, 106);*/
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
