--- a/src/PathfindingVisualizer/PathfindingVisualizer.css
+++ b/src/PathfindingVisualizer/PathfindingVisualizer.css
@@ -1,5 +1,7 @@
 .grid {
-  margin: 170px 0 0;
+  margin-top: 170px;
+  margin-left: auto;
+  margin-right: auto;
   position: relative;
   /* top: 160px; */
 }
